login and registration done

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="./src/assets/css/style.css">
     <link rel="stylesheet" href="./src/assets/css/components.css">
     <link rel="stylesheet" href="./src/assets/css/custom.css">
+    <link rel="stylesheet" href="./src/assets/bundles/bootstrap-social/bootstrap-social.css">
     <link rel="shortcut icon" type='image/x-icon' href="./src/assets/img/favicon.ico">
+    <link rel="stylesheet" href="./src/assets/bundles/jquery-selectric/selectric.css">
     <script src="https://unpkg.com/feather-icons"></script>
   </head>
   <body>
@@ -20,6 +22,9 @@
     <script src="/src/assets/js/page/index.js"></script>
     <script src="/src/assets/js/scripts.js"></script>
     <script src="/src/assets/js/custom.js"></script>
+    <script src="/src/assets/bundles/jquery-pwstrength/jquery.pwstrength.min.js"></script>
+    <script src="/src/assets/bundles/jquery-selectric/jquery.selectric.min.js"></script>
+    <script src="/src/assets/js/page/auth-register.js"></script>
     <script>
       feather.replace();
     </script>
